added sso and download links
